src/test/ui/derives/derives-span-Clone-enum.stderr
error[E0277]: the trait bound `Error: std::clone::Clone` is not satisfied
  --> $DIR/derives-span-Clone-enum.rs:9:6
   |
LL |      Error
   |      ^^^^^ the trait `std::clone::Clone` is not implemented for `Error`
   |
   = note: required by `std::clone::Clone::clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
